# mlflow-gcp

./: README.md  pyproject.toml  train.py
gcp/: README.md
gcp/mlflow_server/: Dockerfile  README.md  requirements.txt  run_mlflow.py
gcp/mlflow_server/etl/: etl.py  main.py  requirement.txt
gcp/mlflow_server/pre_process/: pre_process.py
gcp/mlflow_server/predict/: main.py  predict.py  requirements.txt
gcp/pre_process/: main.py  requirements.txt
terraform/: artifact_registry.tf  cloud_run_mlflow.tf  etl_process_predict.tf  main.tf  postgres.tf  secrets.tf  storage_bucket.tf  variables.tf  versions.tf
