[tool.poetry]
name = "mlflow-gcp-tutorial"
version = "0.1.0"
description = "A project to train LSTM models on MLflow remote server"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26"
scikit-learn = "^1.5.1"
tensorflow = "2.17.0"
keras = "^3.5.0"
mlflow = "2.17.0"
kagglehub = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
